# modular_am

./: .env.local.example  .gitignore  QUESTION_5.txt  README.md  app.py  pyproject.toml  requirements.txt
.azure/: config
alembic/: env.py
alembic/versions/: 52af0f9a71cb_create_security_desc_index.py  e19ebbc6acf5_from_scratch.py
config/: template.py
scripts/: backfill_increment.py
services/: db_utils.py  scrape.py
setting/: config.py  model.py  sqlalchemy_config.py
test_file/: test.html
utils/: client.py  logging.py
