[project]
name = "modular_am"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi[standard]==0.115.14",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg[binary]==3.2.9",
    "sqlmodel==0.0.24",
    "alembic==1.15.2",
    "aiofiles>=24.1.0",
    "bs4==0.0.2",
]
