[project]
name = "modular_am"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi[standard]==0.115.14",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "sqlmodel==0.0.24",
    "alembic==1.15.2",
    "sqlalchemy==2.0.40",
    "pydantic-settings==2.10.1",
    "aiofiles>=24.1.0",
    "bs4==0.0.2",
    "aiohttp==3.12.13",
    "aioodbc==0.5.0",
]
